hphp/test/vm/strict_bad_start.php.exp
HipHop Fatal error: syntax error, unexpected T_STRICT_ERROR, expecting $end in hphp/test/vm/strict_bad_start.php on line 1
