hphp/test/vm/strict_bad_start.php
... garbage ...
<?hh
echo "Nothing allowed before <?hh...";

